Add mailer, test and deployment script

--- a/test/fixtures/subscribers.yml
+++ b/test/fixtures/subscribers.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  product: one
-  email: MyString
+david:
+  product: tshirt
+  email: david@example.org
+  unsubscribe_token: abcd1234
 
-two:
-  product: two
-  email: MyString
+chris:
+  product: tshirt
+  email: chris@example.org
+  unsubscribe_token: efgh5678
