--- a/.github/workflows/merge_dependabot.yml
+++ b/.github/workflows/merge_dependabot.yml
@@ -14,36 +14,42 @@ jobs:
     if: github.event.pull_request.user.login == 'dependabot[bot]'
 
     steps:
-      - name: Check PR Mergeability
+      - name: Wait for PR Mergeability
         id: check_merge
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            if (!context.payload.pull_request) {
-              core.setFailed('No pull request context found.');
-            }
-            
-            const prNumber = context.payload.pull_request.number;
-            const { data: pullRequest } = await github.rest.pulls.get({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: prNumber,
-            });
+            async function waitForMergeability() {
+              const prNumber = context.payload.pull_request.number;
+              let attempt = 0;
+              
+              while (attempt < 5) { // Retry up to 5 times
+                const { data: pullRequest } = await github.rest.pulls.get({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  pull_number: prNumber,
+                });
 
-            if (!pullRequest.mergeable || pullRequest.mergeable_state !== 'clean') {
-              core.setFailed('PR is not mergeable.');
+                if (pullRequest.mergeable && pullRequest.mergeable_state === 'clean') {
+                  return;
+                }
+
+                console.log(`Attempt ${attempt + 1}: PR is not mergeable. Retrying in 5 seconds...`);
+                attempt++;
+                await new Promise(resolve => setTimeout(resolve, 5000)); // Wait 5 seconds
+              }
+
+              core.setFailed('PR is not mergeable after multiple attempts.');
             }
+
+            await waitForMergeability();
 
       - name: Merge PR
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            if (!context.payload.pull_request) {
-              core.setFailed('No pull request context found.');
-            }
-
             await github.rest.pulls.merge({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -57,10 +63,6 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            if (!context.payload.pull_request) {
-              core.setFailed('No pull request context found.');
-            }
-
             const pr = context.payload.pull_request;
             if (pr.head.ref !== 'main') {
               await github.rest.git.deleteRef({
